--- a/html/folder.html
+++ b/html/folder.html
@@ -10,18 +10,18 @@
 
 <body>
     <div class="ContainerTop">
-        <div>
-            <figure id="principal">
-                <img src="../imagem/foto01.png" alt="Isabelle Prado">
+        <div id="principal">
+            <figure >
+               <img src="../imagem/foto01.png" alt="Isabelle Prado">
             </figure>
         </div>
-        
-        <ul>
-            <h3><li>Nutricionista</li></h1>
-            <h1><li>Isabelle Prado</li></h1>
-            <h2><li>Marque sua consulta</li></h2>
-        </ul>
-        </div>
+           
+            <ul>
+                <li id="position"><h3>Nutricionista</h3></li>
+                <li><h1>Isabelle Prado</h1></li>
+
+            </ul>
+
     </div>
 
 </body>
