Está faltando estilizar agora!

--- a/html/folder02.html
+++ b/html/folder02.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,22 +10,47 @@
 
 <body>
 
-        <div class="imagem">
-            <figure>
-                <img src="../imagem/foto01.png" alt="Nutricionista">
-            </figure>
-            <figcaption> Isabelle Prado</figcaption>
+    <!-- Topo -->
+    <div class="imagem">
+        <figure class="imagem01">
+            <img src="../imagem/laranja02.jpeg" alt="Nutricionista">
+        </figure>
+        <figcaption>Isabelle Prado</figcaption>
 
-            <h1>Agende sua consulta</h1>
-            <ul>
-                <li><a href="">Consulta</a></li>
-                <li><a href="">Ficha de anaminese</a></li>
-                <li><a href="">Receitas</a></li>
-            </ul>
-            
-        </div>        
-        <div class="biografia">
+        <h1>Agende sua consulta</h1>
+        <ul>
+            <li><a href="">Consulta</a></li>
+            <li><a href="">Ficha de anaminese</a></li>
+            <li><a href="">Receitas</a></li>
+        </ul>
+    </div>
 
-        </div>
+    <!-- Card 01 -->
+    <div class="card">
+
+        <img src="../imagem/Imagem-Biografia.jpeg" alt="Natação Isabelle Prado">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo veniam, itaque tempore non,
+            obcaecati aperiam doloremque provident ducimus dolorem, magni deleniti assumenda dolores expedita
+            necessitatibus ut. At, eum harum.</p>
+        <img id="imagem01", src="../imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
+
+
+     
+
+    </div>
+
+    <!-- Card 02 -->
+    <div class="card">
+
+        <img id="imagem02", src="../imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
+
+        <p id="paragrafo02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo veniam, itaque tempore non,
+            obcaecati aperiam doloremque provident ducimus dolorem, magni deleniti assumenda dolores expedita
+            necessitatibus ut. At, eum harum.</p>
+
+    </div>
+
+
 </body>
+
 </html>
