--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styleFolder02.css">
+    <link rel="stylesheet" href="./css/styleFolder02.css">
     <title>Isabelle Nutricionista</title>
 </head>
 
@@ -13,7 +13,7 @@
     <!-- Topo -->
     <div class="imagem">
         <figure class="imagem01">
-            <img src="../imagem/laranja02.jpeg" alt="Nutricionista">
+            <img src="./imagem/laranja02.jpeg" alt="Nutricionista">
         </figure>
         <figcaption>Isabelle Prado</figcaption>
 
@@ -28,11 +28,11 @@
     <!-- Card 01 -->
     <div class="card">
 
-        <img src="../imagem/Imagem-Biografia.jpeg" alt="Natação Isabelle Prado">
+        <img src="./imagem/Imagem-Biografia.jpeg" alt="Natação Isabelle Prado">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo veniam, itaque tempore non,
             obcaecati aperiam doloremque provident ducimus dolorem, magni deleniti assumenda dolores expedita
             necessitatibus ut. At, eum harum.</p>
-        <img id="imagem01", src="../imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
+        <img id="imagem01", src="./imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
 
 
      
@@ -42,7 +42,7 @@
     <!-- Card 02 -->
     <div class="card">
 
-        <img id="imagem02", src="../imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
+        <img id="imagem02", src="./imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
 
         <p id="paragrafo02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo veniam, itaque tempore non,
             obcaecati aperiam doloremque provident ducimus dolorem, magni deleniti assumenda dolores expedita
