--- a/index.html
+++ b/index.html
@@ -28,21 +28,18 @@
     <!-- Card 01 -->
     <div class="card">
 
-        <img src="./imagem/Imagem-Biografia.jpeg" alt="Natação Isabelle Prado">
+        <img class="imagemCard01", src="./imagem/Imagem-Biografia.jpeg" alt="Natação Isabelle Prado">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo veniam, itaque tempore non,
             obcaecati aperiam doloremque provident ducimus dolorem, magni deleniti assumenda dolores expedita
             necessitatibus ut. At, eum harum.</p>
-        <img id="imagem01", src="./imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
-
-
-     
+        <img class="imagemCard01", src="./imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
 
     </div>
 
     <!-- Card 02 -->
     <div class="card">
 
-        <img id="imagem02", src="./imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
+        <img class="imagemCard02", src="./imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
 
         <p id="paragrafo02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo veniam, itaque tempore non,
             obcaecati aperiam doloremque provident ducimus dolorem, magni deleniti assumenda dolores expedita
