Alterando o logo e configurança para celular

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Topo -->
     <div class="imagem">
         <figure class="imagem01">
-            <img src="./imagem/laranja02.jpeg" alt="Nutricionista">
+            <img src="./imagem/logotipoRedondo02.png" alt="Nutricionista">
         </figure>
         <figcaption>Isabelle Prado</figcaption>
 
