--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Card 02 -->
     <div class="card">
 
-        <img class="imagemCard02", src="./imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
+        <img class="imagemCard02", src="./imagem/TCC.jpg" alt="Natação Isabelle Prado">
 
         <p id="paragrafo02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo veniam, itaque tempore non,
             obcaecati aperiam doloremque provident ducimus dolorem, magni deleniti assumenda dolores expedita
