Precisa estilizar melhor

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <!-- Topo -->
-    <div class="imagem">
+    <div class="header">
         <figure class="imagem01">
             <img src="./imagem/logotipoRedondo02.png" alt="Nutricionista">
         </figure>
@@ -25,16 +25,23 @@
         </ul>
     </div>
 
+
     <!-- Card 01 -->
-    <div class="card">
+    <div>
 
-        <img class="imagemCard01", src="./imagem/Imagem-Biografia.jpeg" alt="Natação Isabelle Prado">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo veniam, itaque tempore non,
-            obcaecati aperiam doloremque provident ducimus dolorem, magni deleniti assumenda dolores expedita
-            necessitatibus ut. At, eum harum.</p>
-        <img class="imagemCard01", src="./imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
-
+        <div class="top-Bar">
+            <h2>Isabelle Prado</h2>
+        </div>
+        
+        <div class="card">
+            <img class="imagemCard01", src="./imagem/Imagem-Biografia02.jpeg" alt="Natação Isabelle Prado">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo veniam, itaque tempore non,
+                obcaecati aperiam doloremque provident ducimus dolorem, magni deleniti assumenda dolores expedita
+                necessitatibus ut. At, eum harum.</p>
+            <img class="imagemCard01", src="./imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
+        </div>
     </div>
+    
 
     <!-- Card 02 -->
     <div class="card">
