Precisa estilizar melhor 03

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 
     <!-- Card 02 -->
     <div class="card">
+        <div class="top-Bar">
+            <h2>Isabelle Prado</h2>
+        </div>
 
         <img class="imagemCard02", src="./imagem/TCC.jpg" alt="Natação Isabelle Prado">
 
