--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div>
         <div class="top-Bar">
-            <h2>Isabelle Prado</h2>
+            <h2>TTC: &nbsp; &nbsp; TDAH</h2>
         </div>
 
         <div class="card">
