novo designer do projeto da Isa

--- a/index.html
+++ b/index.html
@@ -1,36 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styleFolder02.css">
     <title>Isabelle Nutricionista</title>
+    <!-- Fontes para os textos -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@500&display=swap" rel="stylesheet">
+    <!-- Fontes para o corpo da página -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400;0,6..96,500;1,6..96,400&family=Charm&family=Montserrat+Alternates:wght@100&family=Poiret+One&family=Sen&family=Shippori+Mincho:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <!-- Topo -->
-    <div class="header">
-        <figure class="imagem01">
-            <img src="./imagem/logotipoRedondo02.png" alt="Nutricionista">
-        </figure>
-        <figcaption>Isabelle Prado</figcaption>
 
-        <h1>Agende sua consulta</h1>
-        <ul>
-            <li><a href="">Consulta</a></li>
-            <li><a href="">Ficha de anaminese</a></li>
-            <li><a href="">Receitas</a></li>
-        </ul>
-    </div>
+        <div class="incio">
+            <nav>
+                <ul>
+                    <li><img src="../projetoIsa/imagem/instagram.png" alt="instagram"></li>
+                    <li><img src="../projetoIsa/imagem/whatsapp.png" alt=""></li>
+                    <li></li>
+                </ul>
 
+                <ul>
+                    <li><a href="">Consulta</a></li>
+                    <li><a href="">Ficha de anaminese</a></li>
+                    <li><a href="">Receitas</a></li>
+                </ul>
+            </nav>
+        </div>
+       <div class="header">
+            <figure class="imagem01">
+                <img src="./imagem/logotipoRedondo02.png" alt="Nutricionista">
+            </figure>
+            <!-- <figcaption>Isabelle Prado</figcaption> -->
+            <h1>Agende sua consulta</h1>
+        </div>
 
     <!-- Card 01 -->
     <div>
-
         <div class="top-Bar">
-            <h2>Isabelle Prado</h2>
+            <h2>Quem é Isabelle Prado?</h2>
         </div>
 
         <div class="card">
@@ -42,12 +57,10 @@
         </div>
     </div>
 
-
     <!-- Card 02 -->
-
     <div>
         <div class="top-Bar">
-            <h2>TTC: &nbsp; &nbsp; TDAH</h2>
+            <h2>Trabalho de Conclusão de Curso - &nbsp; TDAH</h2>
         </div>
 
         <div class="card">
@@ -57,8 +70,11 @@
                 itaque tempore non,
                 obcaecati aperiam doloremque provident ducimus dolorem, magni deleniti assumenda dolores expedita
                 necessitatibus ut. At, eum harum.</p>
-
         </div>
+    </div>
+
+    <div class="fim">
+        
     </div>
 
 </body>
