corrigindo a chamada da imagem

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="incio">
             <nav>
                 <ul>
-                    <li><img src="../projetoIsa/imagem/instagram.png" alt="instagram"></li>
-                    <li><img src="../projetoIsa/imagem/whatsapp.png" alt=""></li>
+                    <li><img src="./imagem/instagram.png" alt="instagram"></li>
+                    <li><img src="./imagem/whatsapp.png" alt="whatsapp"></li>
                     <li></li>
                 </ul>
 
