adicionando link ao instagram

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <div class="incio">
             <nav>
                 <ul>
-                    <li><img src="./imagem/instagram.png" alt="instagram"></li>
+                    <li><a href="instagram://user?username=isabellepradonutri">
+                        <img src="./imagem/instagram.png" alt="instagram"></a>
+                    </li>
                     <li><img src="./imagem/whatsapp.png" alt="whatsapp"></li>
                     <li></li>
                 </ul>
