adicionando o número da gata

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="instagram://user?username=isabellepradonutri">
                         <img src="./imagem/instagram.png" alt="instagram"></a>
                     </li>
-                    <li><img src="./imagem/whatsapp.png" alt="whatsapp"></li>
+                    <li><a href="whatsapp://12991382298"><img src="./imagem/whatsapp.png" alt="whatsapp"></a></li>
                     <li></li>
                 </ul>
 
