--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
         </div>
 
         <div class="card">
-            <img class="imagemCard01" , src="./imagem/Imagem-Biografia02.jpeg" alt="Natação Isabelle Prado">
+            <img class="imagemCard01", src="./imagem/Imagem-Biografia02.jpeg" alt="Natação Isabelle Prado">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo veniam, itaque tempore non,
                 obcaecati aperiam doloremque provident ducimus dolorem, magni deleniti assumenda dolores expedita
                 necessitatibus ut. At, eum harum.</p>
-            <img class="imagemCard01" , src="./imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
+            <img class="imagemCard01", src="./imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
         </div>
     </div>
 
     <!-- Card 02 -->
     <div>
         <div class="top-Bar">
-            <h2>Trabalho de Conclusão de Curso - &nbsp; TDAH</h2>
+            <h2>Trabalho de Conclusão de Curso - TDAH</h2>
         </div>
 
         <div class="card">
-            <img class="imagemCard02" , src="./imagem/TCC.jpg" alt="Natação Isabelle Prado">
+            <img class="imagemCard02", src="./imagem/TCC.jpg" alt="Natação Isabelle Prado">
 
             <p id="paragrafo02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo veniam,
                 itaque tempore non,
