subindo o arquivo de ficha de anaminese

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
                 <ul>
                     <li><a href="">Consulta</a></li>
-                    <li><a href="">Ficha de anaminese</a></li>
+                    <li><a href="./arquivos/FichaAnamnese.pdf">Ficha de anaminese</a></li>
+                    <!-- <li><a href="./arquivos/FichaAnamnese.pdf" download>Ficha de anaminese</a></li> -->
                     <li><a href="">Receitas</a></li>
                 </ul>
             </nav>
@@ -62,7 +63,7 @@
     <!-- Card 02 -->
     <div>
         <div class="top-Bar">
-            <h2>Trabalho de Conclusão de Curso - TDAH</h2>
+            <h2 id="top-bar02">Trabalho de Conclusão de Curso - TDAH</h2>
         </div>
 
         <div class="card">
