subindo o arquivo de ficha de anaminese

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 <ul>
                     <li><a href="">Consulta</a></li>
-                    <li><a href="./arquivos/FichaAnamnese.pdf">Ficha de anaminese</a></li>
+                    <li><a href="./arquivos/FichaAnamnese.pdf" target="_blank">Ficha de anaminese</a></li>
                     <!-- <li><a href="./arquivos/FichaAnamnese.pdf" download>Ficha de anaminese</a></li> -->
                     <li><a href="">Receitas</a></li>
                 </ul>
