Começando um novo projeto 05/02/2024

--- a/index.html
+++ b/index.html
@@ -1,85 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styleFolder02.css">
-    <title>Isabelle Nutricionista</title>
-    <!-- Fontes para os textos -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@500&display=swap" rel="stylesheet">
-    <!-- Fontes para o corpo da página -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400;0,6..96,500;1,6..96,400&family=Charm&family=Montserrat+Alternates:wght@100&family=Poiret+One&family=Sen&family=Shippori+Mincho:wght@500&display=swap" rel="stylesheet">
+    <title>Isabelle Prado</title>
 </head>
-
 <body>
-
-    <!-- Topo -->
-
-        <div class="incio">
-            <nav>
-                <ul>
-                    <li><a href="instagram://user?username=isabellepradonutri">
-                        <img src="./imagem/instagram.png" alt="instagram"></a>
-                    </li>
-                    <li><a href="whatsapp://12991382298"><img src="./imagem/whatsapp.png" alt="whatsapp"></a></li>
-                    <li></li>
-                </ul>
-
-                <ul>
-                    <li><a href="">Consulta</a></li>
-                    <li><a href="./arquivos/FichaAnamnese.pdf" target="_blank">Ficha de anaminese</a></li>
-                    <!-- <li><a href="./arquivos/FichaAnamnese.pdf" download>Ficha de anaminese</a></li> -->
-                    <li><a href="">Receitas</a></li>
-                </ul>
-            </nav>
-        </div>
-       <div class="header">
-            <figure class="imagem01">
-                <img src="./imagem/logotipoRedondo02.png" alt="Nutricionista">
-            </figure>
-            <!-- <figcaption>Isabelle Prado</figcaption> -->
-            <h1>Agende sua consulta</h1>
-        </div>
-
-    <!-- Card 01 -->
-    <div>
-        <div class="top-Bar">
-            <h2>Quem é Isabelle Prado?</h2>
-        </div>
-
-        <div class="card">
-            <img class="imagemCard01", src="./imagem/Imagem-Biografia02.jpeg" alt="Natação Isabelle Prado">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo veniam, itaque tempore non,
-                obcaecati aperiam doloremque provident ducimus dolorem, magni deleniti assumenda dolores expedita
-                necessitatibus ut. At, eum harum.</p>
-            <img class="imagemCard01", src="./imagem/Imagem Biografia02.jpeg" alt="Natação Isabelle Prado">
-        </div>
-    </div>
-
-    <!-- Card 02 -->
-    <div>
-        <div class="top-Bar">
-            <h2 id="top-bar02">Trabalho de Conclusão de Curso - TDAH</h2>
-        </div>
-
-        <div class="card">
-            <img class="imagemCard02", src="./imagem/TCC.jpg" alt="Natação Isabelle Prado">
-
-            <p id="paragrafo02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo veniam,
-                itaque tempore non,
-                obcaecati aperiam doloremque provident ducimus dolorem, magni deleniti assumenda dolores expedita
-                necessitatibus ut. At, eum harum.</p>
-        </div>
-    </div>
-
-    <div class="fim">
-        
-    </div>
-
+    
 </body>
-
 </html>
