--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./css/styleProj02.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Icons do bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Icones que não estou usando, pode apagar depois -->
+    <script
+      src="https://kit.fontawesome.com/07173a4f04.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!--beginning of the project  -->
     <title>Isabelle Prado</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!-- SideBar - Left side Menu -->
+    <div class="header-box">
+      <div class="left-sidebar active">
+        <figure id="imageMenu">
+          <img src="./imagem/perfil.jpeg" alt="Isabelle Prado" />
+          <figcaption>Isabelle Prado</figcaption>
+        </figure>
+        <!-- Links of social media -->
+        <div class="midias">
+          <a href=""><i class="bi bi-whatsapp"></i></a>
+          <a href=""><i class="bi bi-instagram"></i></a>
+          <a href=""><i class="bi bi-youtube"></i></a>
+          <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+        </div>
+
+        <!-- Links on the page -->
+          <nav class="links">
+            <ul>
+              <li><a href="#"><i class="fa-solid fa-house fa-lg" id="icones"></i><span>ínicio</span></a></li>
+              <li><a href="#"><i class="fa-solid fa-address-card fa-lg" id="icones"></i><span>Sobre</span></a></li>
+              <li><a href="#"><i class="fa-solid fa-table-list fa-lg" id="icones"></i><span>Resumo</span></a></li>
+              <li><a href="#"><i class="fa-solid fa-bookmark fa-2xl" id="icones"></i><span>portfolio</span></a></li>
+              <li><a href="#"><i class="fa-solid fa-flag fa-lg" id="icones"></i><span>Relatos</span></a></li>
+            </ul>
+          </nav>
+      </div>
+      <!-- Colocar o conteudo da página -->
+    </div>
+
+    <!-- <div class="pageContainer">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At officiis quae similique ipsam, dolorem commodi. Corporis quidem id possimus vitae sapiente quo maiores tempore at facere, praesentium tenetur. Inventore, ratione.</p>
+    </div> -->
+  </body>
 </html>
