Projeto até o momento

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
         </figure>
         <!-- Links of social media -->
         <div class="midias">
-          <a href=""><i class="bi bi-whatsapp"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
+          <a href="https://wa.me//5512991382298?text=Gostaria de realizar uma consulta nutricional"
+           target="_blank"><i class="bi bi-whatsapp"></i>
+          </a>
+          <a href="https://www.instagram.com/isabellepradonutri/" target="_blank"><i class="bi bi-instagram"></i></a>
           <a href=""><i class="bi bi-youtube"></i></a>
           <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
@@ -48,11 +50,17 @@
             </ul>
           </nav>
       </div>
-      <!-- Colocar o conteudo da página -->
+        <div class="page">    
+            <section id="teste"></section>
+            <section>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus vero minus, molestiae harum unde quisquam accusantium esse quasi a alias suscipit, deleniti recusandae veniam voluptatum nemo fugit. Adipisci, non earum?
+            </section>
+            <section>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, fuga! Non enim temporibus sit autem blanditiis! Eius officia nemo tempore sapiente pariatur quae hic corrupti quibusdam. Perferendis aut quam ratione?
+            </section>
+        </div>
     </div>
 
-    <!-- <div class="pageContainer">
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At officiis quae similique ipsam, dolorem commodi. Corporis quidem id possimus vitae sapiente quo maiores tempore at facere, praesentium tenetur. Inventore, ratione.</p>
-    </div> -->
+   
   </body>
 </html>
